# Calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  README.md  calc_app.cpp  calc_app.h  calculator_core.cpp  calculator_core.h  dark_styles.css  event_handlers.cpp  event_handlers.h  main.cpp  styles.css
styles/: dark_styles.css  styles.css
